# signum-savotta

./: .gitignore  README.md  activate_project.sh  dev-requirements.txt  docker-compose.yml  main.qml  pyproject.toml  vscode_settings_template.json
application/: README.md  assets.qrc  build.ps1  config.ini.example  installer.iss  main.qml  pyproject.toml  requirements.txt
application/src/: assets_rc.py  backend_client.py  config_manager.py  helmet_rfid_tag.py  main.py  printer.py  rfid_reader.py  ui_messages.py
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  run_tests.py
backend/src/: main.py
backend/src/models/: backend_state.py  base.py  client.py  client_state_report.py  sierra_item.py
backend/src/schemas/: __init__py  sierra_item.py  sierra_item_schema.py
backend/src/sierrasync/: sierraquery.py
backend/src/utils/: __init__.py  sierra_classification.py
backend/tests/: README.md  conftest.py  test_main.py  test_sierra_classification_rebuild.py  test_sierra_item_shelfmark.py
etl_component/: Dockerfile  README.md  env.example  pyproject.toml  requirements.txt
etl_component/src/: main.py
src/: main.py
