[tool.black]
line-length = 100
target-version = ['py313']

[tool.pylint."messages control"]
ignore = ["setup.py", "__init__.py"]
disable = "all"
enable = [
  "empty-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring"
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 120
exclude = [
  ".git",
  "__pycache__",
  ".venv"
]
extend-ignore = [
    "E203"
]