[tool.poetry]
name = "signum-savotta-application"
version = "0.0.1"
description = "Helsinki City Library classification change labeller application."
authors = ["Mikko Vihonen <mikko.vihonen@iki.fi>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "<3.14,>=3.9"
pyusb = "1.3.1"
pyserial = "3.5"
brother-ql2 = "1.4a0"
pyside6 = "6.9.1"
psutil = "7.0.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tools.pyright]
reportMissingTypeArgument = true 
strictListInference = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
