[tool.poetry]
name = "signum-savotta-backend"
version = "0.0.1"
description = "Backend for Helsinki City Library classification change labeller application."
authors = ["Mikko Vihonen <mikko.vihonen@iki.fi>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
pydantic = "^2.7.0"
sentry-sdk = "^2.13.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.5"
isort = "^5.13.2"
pytest = "^8.1.1"
deptry = "^0.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
