[tool.poetry]
name = "signum-savotta-backend"
version = "0.0.1"
description = "Backend for Helsinki City Library classification change shelf mark labelling application."
authors = ["Mikko Vihonen <mikko.vihonen@iki.fi>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
apscheduler = "^3.11.0"
asyncpg = "^0.30.0"
fastapi = "^0.116.1"
httpx = "^0.27.0"
pandas = "^2.3.1"
pydantic = "^2.7.0"
python = "^3.13"
python-multipart = "^0.0.20"
sentry-sdk = "^2.34.1"
sqlalchemy = "^2.0.41"
uroman = "^1.3.1.1"
uvicorn = "^0.29.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tools.pyright]
reportMissingTypeArgument = true
strictListInference = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
