[tool.poetry]
name = "signum-savotta-etl"
version = "0.0.1"
description = "ETL component for Helsinki City Library classification change labeller application."
authors = ["Mikko Vihonen <mikko.vihonen@iki.fi>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
asyncpg = "^0.30.0"
httpx = "^0.28.1"
pandas = "^2.3.1"
apscheduler = "^3.11.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tools.pyright]
reportMissingTypeArgument = true
strictListInference = true

[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"